--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <img src="sanguche_cat.png" width="160" height="160">
 <img src="deescreer_cat.png" width="160" height="160">
 <img src="ogbo_cat.png" width="160" height="160">
+<img src="goldish_cat.png" width="160" height="160">
+<img src="toast_cat.png" width="160" height="160">
 </body>
 </html>
