--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <img src="ogbo_cat.png" width="160" height="160">
 <img src="goldish_cat.png" width="160" height="160">
 <img src="toast_cat.png" width="160" height="160">
+<img src="evil_sanguche_cat.png" width="160" height="160">
+<img src="kathy_cat.png" width="160" height="160">
 </body>
 </html>
